--- a/stores/templates/stores/homepage.html
+++ b/stores/templates/stores/homepage.html
@@ -2,8 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <h1> My E-Commerce brok</h1>
-    <br>
+    <h1> My E-Commerce brok</h1><br>
     {% if submitted %}
         {% if messages %}
             {% for message in messages %}
@@ -22,16 +21,19 @@
             {% endfor %}
         {% endif %}
     {% else %}<br>
-        <h3> Category: </h3>
-        <br><br>
+        <h3> Category: </h3><br>
+        {% for category in product %}
+            {{ category.categories }}
+        {% endfor %}<br>
 
         <div class="container">
             <div class="flex-container">
                 {% for gadget in smartphone %}
+                    {{ gadget.categories }}
                     <div class="item">
                         <img src="{{ gadget.image.url }}" style="width: 201px; height: 170px;">
                         <div class="product-title" style="height: 90px; width: 195px;">
-                            <h6> <a href="{% url 'product_show' gadget.id %}" style="text-decoration: none; color: black;"> {{ gadget.name|truncatechars:45 }} </a> </h6>
+                            <h6> <a href="{% url 'smartphone_show' gadget.id %}" style="text-decoration: none; color: black;"> {{ gadget.name|truncatechars:45 }} </a> </h6>
                         </div>
                         <h5 style="color: rgba(0, 136, 226, 0.932); padding-left: 14px;"> Rp.{{ gadget.formatted_price }} </h5>
                         <div class="seller" style="display: flex; margin-left: 10px; margin-bottom: 20px;">
@@ -39,8 +41,7 @@
                             <h6> {{ gadget.owner.store_name }} </h6>
                         </div>
                         <br>
-                        <a href="{% url 'edit_product' gadget.id %}" class="btn btn-warning">Edit Product</a>
-                        
+                        <a href="{% url 'edit_product_smartphone' gadget.id %}" class="btn btn-warning">Edit Product</a>
                     </div>
                 {% endfor %}
             </div>
