--- a/stores/templates/stores/product_add.html
+++ b/stores/templates/stores/product_add.html
@@ -1,107 +1,174 @@
 {% extends 'basic.html' %}
 
 {% block content %}
+    <head>
+        <script src="https://kit.fontawesome.com/9417a4ac8c.js" crossorigin="anonymous"></script>
+    </head>
     <div class="container">
         <div class="title-add-product" style="text-align: center;">
             <h2> Add Product </h2>
         </div><br>
         <form action="" class="form-control" method="POST" enctype="multipart/form-data" style="width: 710px; margin-left: 170px; margin-top: 20px;">
             {% csrf_token %}
-            <!-- <div class="product-information1" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-                <label for="id_product_name" style="padding-bottom: 40px; flex-grow: 1;">Product Name:</label>
+
+            <div class="product-information1" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_product_category" style="padding-bottom: 40px; flex-grow: 1;">Product Category:</label>
                 <div class="form1" style="width: 430px">
-                    {{ product_add.name }}
-                </div>
-            </div>
-            <div class="product-information2" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-                <label for="id_product_image" style="padding-bottom: 40px; flex-grow: 1;">Picture:</label>
-                <div class="form2" style="width: 430px">
-                    {{ product_add.image }}
-                </div>
-            </div>
-            <div class="product-information3" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-                <label for="id_product_price" style="padding-bottom: 40px; flex-grow: 1;">Price:</label>
-                <div class="form3" style="width: 430px">
-                    {{ product_add.price }}
-                </div>
-            </div>
-            <div class="product-information4" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
-                <label for="id_product_category" style="padding-bottom: 40px; flex-grow: 1;">Category:</label>
-                <div class="form4" style="width: 430px">
-                    
+                    {{ product_add.categories }}
+                    <i class="fa-solid fa-angle-down"></i>
                 </div>
             </div>
             <div id="smartphoneForm" style="display: none;">
-                <div class="smartphone-information1" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <div class="smartphone-information1" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                    <label for="id_smartphone_name" style="padding-bottom: 40px; flex-grow: 1;">Smartphone Name:</label>
+                    <div class="form2" style="width: 430px">
+                        {{ smartphone_add.name }}
+                    </div>
+                </div>
+                <div class="smartphone-information2" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                    <label for="id_smartphone_image" style="padding-bottom: 40px; flex-grow: 1;">Product Picture:</label>
+                    <div class="form3" style="width: 430px">
+                        {{ smartphone_add.image }}
+                    </div>
+                </div>
+                <div class="smartphone-information3" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                    <label for="id_smartphone_price" style="padding-bottom: 40px; flex-grow: 1;">Price:</label>
+                    <div class="form4" style="width: 430px">
+                        {{ smartphone_add.price }}
+                    </div>
+                </div>
+                <div class="smartphone-information4" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
                     <label for="id_smartphone_memory" style="padding-bottom: 40px; flex-grow: 1;">Memory Capacity:</label>
                     <div class="form5" style="width: 430px">
                         {{ smartphone_add.memory_capacity }}
                     </div>
                 </div>
-                <div class="smartphone-information2" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <div class="smartphone-information5" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
                     <label for="id_smartphone_ram" style="padding-bottom: 40px; flex-grow: 1;">RAM Capacity:</label>
                     <div class="form6" style="width: 430px">
                         {{ smartphone_add.ram_capacity }}
                     </div>
                 </div>
-                <div class="smartphone-information3" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <div class="smartphone-information6" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
                     <label for="id_smartphone_warranty" style="padding-bottom: 40px; flex-grow: 1;">Warranty Period:</label>
                     <div class="form7" style="width: 430px">
                         {{ smartphone_add.warranty_period }}
                     </div>
                 </div>
-                <div class="smartphone-information4" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <div class="smartphone-information7" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
                     <label for="id_smartphone_stock" style="padding-bottom: 40px; flex-grow: 1;">Stock:</label>
                     <div class="form8" style="width: 430px">
                         {{ smartphone_add.stock }}
                     </div>
                 </div>
-                <div class="smartphone-information5" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <div class="smartphone-information8" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
                     <label for="id_smartphone_seller_Address" style="padding-bottom: 40px; flex-grow: 1;">Seller Address:</label>
                     <div class="form9" style="width: 430px">
                         {{ smartphone_add.seller_Address }}
                     </div>
                 </div>
-                <div class="smartphone-information6" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
-                    <label for="id_product_category" style="padding-bottom: 40px; flex-grow: 1;">Condition:</label>
+                <div class="smartphone-information9" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_condition" style="padding-bottom: 40px; flex-grow: 1;">Condition:</label>
                     <div class="form10" style="width: 430px">
                         {{ smartphone_add.condition }}
+                        <i class="fa-solid fa-angle-down"></i>
                     </div>
                 </div>
-                <div class="smartphone-information7" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <div class="smartphone-information10" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
                     <label for="id_smartphone_brand" style="padding-bottom: 40px; flex-grow: 1;">Brand:</label>
-                    <div class="form10" style="width: 430px">
+                    <div class="form11" style="width: 430px">
                         {{ smartphone_add.brand }}
+                        <i class="fa-solid fa-angle-down"></i>
+                    </div>
+                </div>
+                <div class="smartphone-information11" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_description" style="padding-bottom: 40px; flex-grow: 1;">Description:</label>
+                    <div class="form12" style="width: 430px">
+                        {{ smartphone_add.description }}
+                    </div>
+                </div><br>
+                <div class="smartphone-information12" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_owner" style="padding-bottom: 40px; flex-grow: 1;">Owner:</label>
+                    <div class="form13" style="width: 430px">
+                        {{ smartphone_add.owner }}
+                    </div>
+                </div>
+                <div class="smartphone-information13" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_categories" style="padding-bottom: 40px; flex-grow: 1;">Category:</label>
+                    <div class="form14" style="width: 430px">
+                        {{ smartphone_add.categories }}
                     </div>
                 </div>
             </div>
-            <div class="product-information5" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
-                <label for="id_product_description" style="padding-bottom: 40px; flex-grow: 1;">Description:</label>
-                <div class="form5" style="width: 430px">
-                    {{ product_add.description }}
-                </div>
-            </div><br>
-            <div class="profile-information6" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
-                <label for="id_product_owner" style="padding-bottom: 40px; flex-grow: 1;">Owner:</label>
-                <div class="form6" style="width: 430px">
-                    {{ product_add.owner }}
-                </div>
-            </div> -->
             <a href="{% url 'homepage' %}" class="btn btn-danger" style="margin-left: 290px; margin-right: 5px;">Cancel</a>
             <input type="submit" value="Submit" class="btn btn-success">
         </form>
     </div>
 
+    <style>
+        .form1 {
+            position: relative;
+        }
+
+        .form10 {
+            position: relative;
+        }
+
+        .form11 {
+            position: relative;
+        }
+
+        .form1 select {
+            padding-right: 30px;
+        }
+
+        .form10 select {
+            padding-right: 30px;
+        }
+
+        .form11 select{
+            padding-right: 30px;
+        }
+
+        .form1 .fa-angle-down {
+            position: absolute;
+            top: 50%;
+            right: 10px;
+            transform: translateY(-50%);
+        }
+
+        .form10 .fa-angle-down {
+            position: absolute;
+            top: 50%;
+            right: 10px;
+            transform: translateY(-50%);
+        }
+
+        .form11 .fa-angle-down {
+            position: absolute;
+            top: 50%;
+            right: 10px;
+            transform: translateY(-50%);
+        }
+
+    </style>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            let categoryField = document.querySelector('.form4 select')
+            let categoryField = document.querySelector('.form1 select')
             let smartphoneField = document.getElementById('smartphoneForm')
+            // let smartphoneCategoriesForm = document.querySelector('.smartphone-information13')
+            let smartphoneCategoriesForm = document.querySelector('.form14 select')
+
+        //     smartphoneCategoriesForm.value = '2'
 
             categoryField.addEventListener('change', function() {
-                console.log(categoryField.value)
-                if (categoryField.value === '4') {
+                // console.log(categoryField.value)
+                console.log(smartphoneCategoriesForm.value)
+                if (categoryField.value === 'Smartphone') {
                     console.log('ini smartphone')
                     smartphoneField.style.display = 'block'
+            //         smartphoneCategoriesForm.value = '2'
                 } else {
                     smartphoneField.style.display = 'none'
                 }
